--- a/cadastrapp/pom.xml
+++ b/cadastrapp/pom.xml
@@ -290,6 +290,26 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+                          <plugin>
+                            <groupId>org.eclipse.jetty</groupId>
+                            <artifactId>jetty-maven-plugin</artifactId>
+                            <version>9.2.11.v20150529</version>
+                            <configuration>
+                              <webApp>
+                                <contextPath>/cadastrapp/</contextPath>
+                              </webApp>
+                              <scanIntervalSeconds>5</scanIntervalSeconds>
+                              <scanTargets>
+                                <scanTarget>src/main/java</scanTarget>
+                                <scanTarget>src/main/resources</scanTarget>
+                              </scanTargets>
+                              <jettyEnvXml>jetty-env.xml</jettyEnvXml>
+                              <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                              <httpConnector>
+                                <port>8287</port>
+                              </httpConnector>
+                           </configuration>
+                          </plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
