--- a/cadastrapp/src/main/webapp/WEB-INF/web.xml
+++ b/cadastrapp/src/main/webapp/WEB-INF/web.xml
@@ -53,9 +53,8 @@
      <!-- Use JNDI Datasource connection -->
     <resource-ref>
 	    <description>Connection Pool</description>
-	    <res-ref-name>jdbc/cadastrapp</res-ref-name>
-	    <res-type>javax.sql.Datasource</res-type>
+            <res-ref-name>jdbc/cadastrapp</res-ref-name>
+	    <res-type>javax.sql.DataSource</res-type>
 	    <res-auth>Container</res-auth>
 	</resource-ref>
-	
 </web-app>
